--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://cc4b4a48-c891-4614-a6e3-782eb9504f8b.preview.emergentagent.com
 WDS_SOCKET_PORT=443
